Edited the footer

--- a/services.html
+++ b/services.html
@@ -202,11 +202,8 @@
                 </div>
                 <div class="container copyright">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-12">
                             <p>&copy; <a href="#">Citadel Valuers</a>, All Right Reserved.</p>
-                        </div>
-                        <div class="col-md-6">
-                            <p>Created by <a href="mailto:musumbidenis@gmail.com">Musumbi Denis</a></p>
                         </div>
                     </div>
                 </div>
