Edited the home page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -33,7 +33,7 @@
                         <div class="col-lg-2">
                             <div class="brand">
                                 <a href="index.html">
-                                    <img src="img/" alt="Company Logo">
+                                    <img src="img/logo.png" alt="Company Logo">
                                 </a>
                             </div>
                         </div>
@@ -80,13 +80,13 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <h2></h2>
-                            <h2><span>Citadel Valuers</span> Limited</h2>
+                            <h2><span>Citadel Valuers</span> <span style="color:crimson;">Limited</span></h2>
                             <p> Market leader in quality, innovative and reliable real estate advisory, 
                             management and agency services in Kenya and beyond.</p>
                             <a class="btn" href="contact.html">Contact Us</a>
                         </div>
                         <div class="col-md-6">
-                            <img src="img/hero.png" alt="Image">
+                            <img src="img/hero.jpg" alt="Image">
                         </div>
                     </div>
                 </div>
@@ -188,51 +188,99 @@
                                 <div class="card">
                                     <div class="card-header">
                                         <a class="card-link collapsed" data-toggle="collapse" href="#collapseOne" aria-expanded="true">
-                                            Question 1
+                                            <b>What is an independent valuation?</b>
                                         </a>
                                     </div>
                                     <div id="collapseOne" class="collapse show" data-parent="#accordion">
                                         <div class="card-body">
-                                            Answer 1
+                                            <p>It is the estimation of value of a particular property/asset at given date for a particular 
+                                            purpose. Valuation can be done for various purposes such as:
+                                            </p>
+                                            <ul>
+                                                <li>Mortgage/Refinancing</li>
+                                                <li>Buy/Sell Valuations</li>
+                                                <li>Rental Assessments</li>
+                                                <li>Stamp Duty Purposes</li>
+                                                <li>Court Purposes</li>
+                                                <li>Book Keeping Purposes</li>
+                                                <li>Insurance</li>
+                                                <li>Tax i.e. Capital Gains Tax, Probate</li>
+                                                <li>Feasibility Purposes</li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="card">
                                     <div class="card-header">
                                         <a class="card-link" data-toggle="collapse" href="#collapseTwo">
-                                            Question 2
+                                            <b>How much does a valuation cost?</b>
                                         </a>
                                     </div>
                                     <div id="collapseTwo" class="collapse" data-parent="#accordion">
                                         <div class="card-body">
-                                            Answer 2
+                                            <p>All registered valuers in Kenya are guided by the valuers scale Cap 532 of the laws of 
+                                            Kenya as follows per THE VALUERS (FORMS & FEES)(AMENDMENT) RULES, 2011
+                                            </p>
+                                            <ul>
+                                                <li>Urban,  Rating and Agriculture Valuation - First Kshs.  2,000,000 at 1.0 per cent; 
+                                                Residue at 0.25 per cent
+                                                </li>
+                                                <li>Compulsory Acquisition Valuation - First Kshs.  2,000,000 at 2.0 per cent; Residue 
+                                                at 0.5 per cent
+                                                </li>
+                                                <li>
+                                                    Rental Valuation - First Kshs. 400,000 p.a at 10 per cent; Residue at 5 per cent
+                                                </li>
+                                                <li>
+                                                    Plant, Machinery  and Automobile - First Kshs. 5,000,000 at 1.5 per cent; Residue at 0.5 per cent 
+                                                </li>
+                                                <li>
+                                                    Furniture, Fittings, Equipment, Trading Stock and Going Concerns - First kshs. 1,000,000 at 5 per cent; 
+                                                    Residue at 2.5 per cent
+                                                </li>
+                                                <li>
+                                                    Minimum Valuation  Fees - kshs.15,000 for any valuation
+                                                </li>
+                                                <li>
+                                                    Consultancy - A minimum of Kshs. 5,000 per hour where such consultancy does not involve carrying out a 
+                                                    valuation and compilation of a valuation report and advising on the value of the property
+                                                </li>
+                                                <li>Travelling Expenses and disbursements - These shall be based on the costs incurred in undertaking the 
+                                                    valuation
+                                                </li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="card">
                                     <div class="card-header">
                                         <a class="card-link" data-toggle="collapse" href="#collapseThree">
-                                            Question 3
+                                            <b>What do Property Managers do?</b>
                                         </a>
                                     </div>
                                     <div id="collapseThree" class="collapse" data-parent="#accordion">
                                         <div class="card-body">
-                                            Answer 3
+                                            <p>Property managers do the following: </p>
+                                            <ul>
+                                                <li>Agent for the landlord (owner)</li>
+                                                <li>Prepare properties for renting</li>
+                                                <li>Inspect properties before, during, and after a lease term</li>
+                                                <li>Market properties</li>
+                                                <li>Make properties available for prospective tenants to view</li>
+                                                <li>Receive applications</li>
+                                                <li>Screen applicants</li>
+                                                <li>Coordinate lease signings and lease renewals</li>
+                                                <li>Maintain the investment property</li>
+                                                <li>Provide administrative and financial property management</li>
+                                                <li>For apartments, provide on-site leasing, maintenance, and management services</li>
+                                                <li>Log correspondence in the property management system</li>
+                                                <li>Rental Property Management Software</li>
+                                                <li>Correspond with owners and tenants</li>
+                                                <li>Coordinate utility payments during the make ready process</li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card">
-                                    <div class="card-header">
-                                        <a class="card-link" data-toggle="collapse" href="#collapseFour">
-                                            Question 4
-                                        </a>
-                                    </div>
-                                    <div id="collapseFour" class="collapse" data-parent="#accordion">
-                                        <div class="card-body">
-                                            Answer 4
-                                        </div>
-                                    </div>
-                                </div> 
                             </div>
                             <a class="btn" href="mailto:citadelvaluers@gmail.com">Ask more</a>
                         </div>
@@ -246,6 +294,7 @@
 
 
             <!-- Testimonial Start -->
+            <!--
             <div class="testimonial">
                 <div class="container">
                     <div class="section-header">
@@ -291,6 +340,7 @@
                     </div>
                 </div>
             </div>
+            -->
             <!-- Testimonial End -->
 
             <!-- Call to Action Start -->
