--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                 <div class="container-fluid">
                     <div class="row align-items-center">
                         <div class="col-md-6">
-                            <img src="img/poster.jpg" alt="Image">
+                            <img src="img/about.png" alt="Image">
                         </div>
                         <div class="col-md-6">
                             <h2 class="section-title">Who We Are</h2>
@@ -145,6 +145,7 @@
 
 
             <!-- Team Start -->
+            <!--
             <div class="team">
                 <div class="container-fluid">
                     <div class="section-header">
@@ -213,6 +214,7 @@
                     </div>
                 </div>
             </div>
+            -->
             <!-- Team End -->
 
 
