--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                         <div class="col-lg-2">
                             <div class="brand">
                                 <a href="index.html">
-                                    <img src="img/" alt="Company Logo">
+                                    <img src="img/logo.png" alt="Company Logo">
                                 </a>
                             </div>
                         </div>
@@ -47,8 +47,9 @@
                                 </div>
                                 <div class="topbar-col">
                                     <div class="topbar-social">
-                                        <a href=""><i class="fab fa-twitter"></i></a>
-                                        <a href=""><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://twitter.com/citadelrealtors"><i class="fab fa-twitter"></i></a>
+                                        <a href="https://www.facebook.com/citadelrealtors"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://www.facebook.com/citadelrealtors"><i class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
