--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                         <div class="col-lg-2">
                             <div class="brand">
                                 <a href="index.html">
-                                    <img src="img/" alt="Company Logo">
+                                    <img src="img/logo.png" alt="Company Logo">
                                 </a>
                             </div>
                         </div>
@@ -47,8 +47,9 @@
                                 </div>
                                 <div class="topbar-col">
                                     <div class="topbar-social">
-                                        <a href=""><i class="fab fa-twitter"></i></a>
-                                        <a href=""><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://twitter.com/citadelrealtors"><i class="fab fa-twitter"></i></a>
+                                        <a href="https://www.facebook.com/citadelrealtors"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://www.facebook.com/citadelrealtors"><i class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -110,29 +111,20 @@
                         </div>
                         <div class="col-md-6">
                             <div class="editor-info">
-                                <h2 class="section-title">Contact Person</h2>
+                                <h2 class="section-title">Contact Person <span style="text-transform: lowercase;">(s)</span></h2>
                                 <div class="editor-item">
-                                    <div class="editor-img">
-                                        <img src="img/editor-1.jpg" alt="Contact Person Image">
-                                    </div>
                                     <div class="editor-text">
                                         <h3>Nairobi Office</h3>
                                         <a href="tel:+254790497125">+254 790 497 125</a>
                                     </div>
                                 </div>
                                 <div class="editor-item">
-                                    <div class="editor-img">
-                                        <img src="img/editor-1.jpg" alt="Contact Person Image">
-                                    </div>
                                     <div class="editor-text">
                                         <h3>Eldoret Office</h3>
                                         <a href="tel:+254786144099">+254 786 144 099</a>
                                     </div>
                                 </div>
                                 <div class="editor-item">
-                                    <div class="editor-img">
-                                        <img src="img/editor-1.jpg" alt="Contact Person Image">
-                                    </div>
                                     <div class="editor-text">
                                         <h3>Nyeri Office</h3>
                                         <a href="tel:+254721256489">+254 721 256 489</a>
