--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
                                 </div>
                                 <div class="topbar-col">
                                     <div class="topbar-social">
-                                        <a href=""><i class="fab fa-twitter"></i></a>
-                                        <a href=""><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://twitter.com/citadelrealtors"><i class="fab fa-twitter"></i></a>
+                                        <a href="https://www.facebook.com/citadelrealtors"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://www.facebook.com/citadelrealtors"><i class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -132,41 +133,41 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-4 col-md-6">
-                            <div class="service-item">
+                            <div class="service-item text-center">
                                 <h3>Valuation</h3>
-                                <img src="img/icon-service-1.png" alt="Service">
+                                <img src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/50/000000/external-appraisal-real-estate-flatart-icons-outline-flatarticons.png"/>
                                 <p>Citadel Valuers Limited has developed special interest in
                                 valuation of plant and machinery, automobile and related assets.</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6">
-                            <div class="service-item">
+                            <div class="service-item text-center">
                                 <h3>Property Management</h3>
-                                <img src="img/icon-service-1.png" alt="Service">
+                                <img src="https://img.icons8.com/ios/50/000000/property.png"/>
                                 <p>Citadel Valuers Limited operates various real estate properties for a fee on behalf of
                                 landlord(s) or acts on behalf of the owner(s)</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6">
-                            <div class="service-item">
+                            <div class="service-item text-center">
                                 <h3>Estate Agency</h3>
-                                <img src="img/icon-service-2.png" alt="Service">
+                                <img src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-estate-real-estate-flatart-icons-outline-flatarticons-2.png"/>
                                 <p>Citadel Valuers Limited is involved in selling, buying and negotiating various properties
                                 on behalf of clients.</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6">
-                            <div class="service-item">
+                            <div class="service-item text-center">
                                 <h3>Asset Tagging</h3>
-                                <img src="img/icon-service-3.png" alt="Service">
+                                <img src="https://img.icons8.com/external-outline-wichaiwi/64/000000/external-asset-banking-and-financial-outline-wichaiwi-2.png"/>
                                 <p>Citadel Valuers Limited also undertakes tagging of assets which involves asset 
                                 identification, verification, tagging and data capture.</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6">
-                            <div class="service-item">
+                            <div class="service-item text-center">
                                 <h3>Feasibility Studies</h3>
-                                <img src="img/icon-service-4.png" alt="Service">
+                                <img src="https://img.icons8.com/pastel-glyph/64/000000/saving-book.png"/>
                                 <p>At Citadel Valuers we also carry out feasibility studies that
                                 account for factors that affect it such as economic, legal and
                                 scheduling factors etc.</p>
