--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                                         <a href="index.html" class="nav-item nav-link active">Home</a>
                                         <a href="about.html" class="nav-item nav-link">About Us</a>
                                         <a href="services.html" class="nav-item nav-link">Services</a>
+                                        <a href="properties.html" class="nav-item nav-link">Properties</a>
                                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                                     </div>
                                 </div>
