Changed some files

--- a/properties.html
+++ b/properties.html
@@ -87,7 +87,7 @@
                           <div class="row">
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/01.png" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/01.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Lower Elgon View (Block 13) - Eldoret Town</h5>
                                   <p class="card-text">
@@ -104,7 +104,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/02.png" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/02.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">King Square Apartments</h5>
                                   <p class="card-text">
@@ -120,7 +120,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/03.png" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/03.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Upper Elgon View (Block 14)</h5>
                                   <p class="card-text">
@@ -137,7 +137,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/04.png" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/04.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Kiahuria Near Ndarugo - Juja</h5>
                                   <p class="card-text">
@@ -154,7 +154,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/05.png" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/05.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Kiawara - Nyeri</h5>
                                   <p class="card-text">
@@ -171,7 +171,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/06.png" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/06.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Ruring’u - Nyeri</h5>
                                   <p class="card-text">
@@ -188,7 +188,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/07.png" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/07.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Kajiado/Kipeto – Kajiado West Area</h5>
                                   <p class="card-text">
@@ -205,7 +205,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/08.png" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/08.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Kajiado/Kitengela – Isinya Area</h5>
                                   <p class="card-text">
@@ -222,7 +222,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/09.png" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/09.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Ndarasha area - Ruiru Sub-County</h5>
                                   <p class="card-text">
@@ -239,7 +239,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/10.png" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/10.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Gilgil Eburru</h5>
                                   <p class="card-text">
