--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                 <div class="container-fluid">
                     <div class="row align-items-center">
                         <div class="col-md-6">
-                            <img src="img/about.png" alt="Image">
+                            <img src="img/about.jpg" alt="Image">
                         </div>
                         <div class="col-md-6">
                             <h2 class="section-title">Who We Are</h2>
