--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="container-fluid">
                     <div class="row align-items-center">
                         <div class="col-md-6">
-                            <img src="img/hero.png" alt="Image">
+                            <img src="img/hero2.jpg" alt="Image">
                         </div>
                         <div class="col-md-6">
                             <h2 class="section-title">About Us</h2>
