--- a/index.html
+++ b/index.html
@@ -64,7 +64,15 @@
                                         <a href="index.html" class="nav-item nav-link active">Home</a>
                                         <a href="about.html" class="nav-item nav-link">About Us</a>
                                         <a href="services.html" class="nav-item nav-link">Services</a>
-                                        <a href="properties.html" class="nav-item nav-link">Properties</a>
+                                        <div class="dropdown">
+                                            <a type="button" class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">
+                                              Properties
+                                            </a>
+                                            <div class="dropdown-menu" style="background-color:aliceblue; border-radius: 5px;">
+                                              <a class="dropdown-item nav-item nav-link" href="properties-sale.html">Properties for Sale</a>
+                                              <a class="dropdown-item nav-item nav-link" href="properties-let.html">Properties to let</a>
+                                            </div>
+                                        </div>
                                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                                     </div>
                                 </div>
