Edited style sheet

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                                             <a type="button" class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">
                                               Properties
                                             </a>
-                                            <div class="dropdown-menu" style="background-color:aliceblue; border-radius: 5px;">
+                                            <div class="dropdown-menu">
                                               <a class="dropdown-item nav-item nav-link" href="properties-sale.html">Properties for Sale</a>
-                                              <a class="dropdown-item nav-item nav-link" href="properties-let.html">Properties to let</a>
+                                              <a class="dropdown-item nav-item nav-link" href="properties-let.html">Properties to Let</a>
                                             </div>
                                         </div>
                                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
