--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                         <div class="col-lg-2">
                             <div class="brand">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="Company Logo">
+                                    <img src="img/logo.jpg" alt="Company Logo">
                                 </a>
                             </div>
                         </div>
