Style sheet modified

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             Property management, Property valuation, Asset tagging, Estate Agency and Feasibility studies
                             services at affordable rates.
                             </p>
-                            <p><a class="btns" href="services.html" role="button">Learn more</a></p>
+                            <p><a class="btn" href="services.html" role="button">Learn more</a></p>
                           </div>
                         </div>
                       </div>
